KB-10079 | Added Test cases for code coverage